<resources>
    <string name="app_name">RegisterUI</string>
    <string name="title">회원가입</string>
    <string name="email">e-Mail</string>
    <string name="PW">비밀번호</string>
    <string name="checkPW">비밀번호 확인</string>
    <string name="name">이름</string>
    <string name="phoneNo">휴대폰 번호</string>
    <string name="BDay">생년월일</string>
    <string name="choose">선택</string>
    <string name="BDayDP">생년월일을 선택하세요</string>
    <string name="memberType">회원 유형 선택</string>
    <string name="student">학생</string>
    <string name="prof">교수</string>
    <string name="employee">교직원</string>
    <string name="contractAgrmt">최종 사용권 계약서(EULA) 동의</string>
    <string name="infoAgrmt">개인정보 수집 및 처리 방침 동의</string>
    <string name="fillPlz">모든 필드를 채워주세요.</string>
    <string name="wrongEmail">잘못된 형식의 e-Mail 입니다.</string>
    <string name="PWeightLength">보안을 위해 8자리 이상의 비밀번호를 설정해주세요.</string>
    <string name="PWmismatch">비밀번호와 비밀번호 확인이 일치하지 않습니다.</string>
    <string name="checkBoxDisagrmt">최종 사용권 계약과 개인정보 수집 및 처리 방침을 읽고 동의해주세요.</string>
    <string name="confirmation">다음 정보로 가입을 진행하시겠습니까?</string>
    <string name="confirm">확인</string>
    <string name="yes">예</string>
    <string name="no">아니오</string>
    <string name="read">읽기</string>


</resources>